--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: 闫肃的博客
-email: suyan0830@gmail.com
+title:ChouKou的博客
+email: felix.zhang@choukou.cn
 description: > # this means to ignore newlines until "baseurl:"
-  闫肃的博客
+  ChouKou博客
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://yansu.org # the base hostname & protocol for your site
+url: http://choukou.cn # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
-author: Su Yan
+author: Chou Kou
 
 # Sidebar filter
 # Choose 'tag' or 'category' as filter in sidebar.
@@ -15,10 +15,10 @@ recent_num: 20
 
 # Social account
 twitter: masonsuyan
-weibo: suyan0830
-github: suyan
-instagram: suyan0830
-linkedin: suyan0830
+weibo: owen_007
+github: ichoukou
+instagram: 
+linkedin: choukou
 
 # avatar and Favicon
 avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
@@ -26,7 +26,7 @@ favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
 
 # disqus config
 disqus:
-  shortname: suyan-zh
+  shortname: choukou-zh
 
 # google analytics config
 ga:
